package at.spengergasse.sj21227acifpos1niiazbekovaedward.domain;

    public enum AccountType {
        ADMIN,
        MEMBER,
        GUEST
    }
