package at.spengergasse.sj21227acifpos1niiazbekovaedward.domain;

public enum BookingStatus {
    CANCELED,
    CHECKED_IN,
    CHECKED_OUT,
    CONFIRMED,
    PENDING
}