package at.spengergasse.sj21227acifpos1niiazbekovaedward.domain;

public enum RoomCategory {
    STANDARD,
    DELUXE,
    FAMILY_SUITE,
    BUSINESS_SUITE
}
